<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#256C34"
    tools:context=".SecondActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="serif-monospace"
        android:text="@string/texttemanachstr"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4DC64D"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="100dp"
        android:background="#8EB155"
        android:text="@string/peremennya"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="100dp"
        android:background="#8EB155"
        android:text="@string/yslovia"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


    <Button
        android:id="@+id/button4"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="100dp"
        android:background="#8EB155"
        android:text="@string/spiski"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="100dp"
        android:background="#8EB155"
        android:text="@string/cikl"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</androidx.constraintlayout.widget.ConstraintLayout>
